--- a/templates/_custom_css.html
+++ b/templates/_custom_css.html
@@ -20,15 +20,15 @@
 
   /* dark mode colors */
   body.dark {
-    --primary-color: #5d77ac;
+    --primary-color: #90b4bc;
     --primary-pale-color: #5d77ac20;
-    --text-color: #9197a5;
-    --text-pale-color: #656a74;
-    --bg-color: #18191b;
+    --text-color: #c6cddb;
+    --text-pale-color: #949699;
+    --bg-color: #212a33;
     --highlight-mark-color: #5f75b035;
     --blockquote-color: #747983;
 
-    --callout-note-color: #5d77ac;
+    --callout-note-color: #90b4bc;
     --callout-important-color: #8062b0;
     --callout-warning-color: #936e51;
     --callout-alert-color: #bc5252;
